--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             background: #3498db;
             color: white;
             padding: 6px;
-            font-size: 8px; /* 11 - 3 */
+            font-size: 6px; /* 11 - 3 */
         }
         .time-table td {
             border: 1px solid #ccc;
@@ -149,12 +149,12 @@
             font-weight: normal !important;
         }
         .oee-color-green {
-            background: #43a047 !important;
+            background: #7CFC98 !important;
             color: #222 !important;
             font-weight: normal !important;
         }
         .r1-cell, .r2-cell {
-            font-size: 15px !important; /* 12 + 3 */
+            font-size: 21px !important; /* 12 + 3 */
         }
         @media (max-width: 768px) {
             .top-bar {
