--- a/index.html
+++ b/index.html
@@ -153,9 +153,12 @@
             color: #222 !important;
             font-weight: normal !important;
         }
-        .r1-cell, .r2-cell {
-            font-size: 25px !important; /* 12 + 3 */
-        }
+       .r1-cell {
+            font-size: 30px !important;
+       }
+      .r2-cell {
+            font-size: 20px !important;
+      }
         @media (max-width: 768px) {
             .top-bar {
                 flex-wrap: nowrap;
