--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
                 font-size: 10px !important;
             }
             .r1-cell {
-                font-size: 24px !important;
+                font-size: 16px !important;
             }
             .r2-cell {
-                font-size: 18px !important;
+                font-size: 16px !important;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek Pulpitu OEE">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłów5555tu+OEE" alt="Nagłówek Pulpitu OEE">
         <div class="top-bar">
             <div class="top-bar-item" id="displayDupaField"></div>
             <div class="top-bar-item select-wrapper">
