--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłów5555tu+OEE" alt="Nagłówek Pulpitu OEE">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłów5555tu+OEE" alt=" -- PODZIWIAJCIE ---- ;) --">
         <div class="top-bar">
             <div class="top-bar-item" id="displayDupaField"></div>
             <div class="top-bar-item select-wrapper">
@@ -404,9 +404,9 @@ document.addEventListener('DOMContentLoaded', function() {
         'nokShift2': { row: 10, col: 'E' },
         'nokShift3': { row: 10, col: 'F' },
         'nokTotal': { row: 10, col: 'C' },
-        'h6_r1': { row: 19, col: 'E' },
-        'h7_r1': { row: 20, col: 'E' },
-        'h8_r1': { row: 21, col: 'E' },
+        'h6_r1': { row: 14, col: 'E' },
+        'h7_r1': { row: 15, col: 'E' },
+        'h8_r1': { row: 16, col: 'E' },
         'h9_r1': { row: 22, col: 'E' },
         'h10_r1': { row: 23, col: 'E' },
         'h11_r1': { row: 24, col: 'E' },
@@ -428,9 +428,9 @@ document.addEventListener('DOMContentLoaded', function() {
         'h3_r1': { row: 40, col: 'E' },
         'h4_r1': { row: 41, col: 'E' },
         'h5_r1': { row: 42, col: 'E' },
-        'h6_r2': { row: 19, col: 'C' },
-        'h7_r2': { row: 20, col: 'C' },
-        'h8_r2': { row: 21, col: 'C' },
+        'h6_r2': { row: 14, col: 'C' },
+        'h7_r2': { row: 15, col: 'C' },
+        'h8_r2': { row: 16, col: 'C' },
         'h9_r2': { row: 22, col: 'C' },
         'h10_r2': { row: 23, col: 'C' },
         'h11_r2': { row: 24, col: 'C' },
