--- a/index.html
+++ b/index.html
@@ -521,9 +521,24 @@ document.addEventListener('DOMContentLoaded', function() {
                     const element = document.getElementById(htmlId);
                     if (element) hideZeroCell(element, value);
                 } else {
-                    const element = document.getElementById(htmlId);
-                    if (element) element.textContent = value;
-                }
+                   const okFields = ['okShift1', 'okShift2', 'okShift3', 'okTotal'];
+const nokFields = ['nokShift1', 'nokShift2', 'nokShift3', 'nokTotal'];
+
+else if (okFields.includes(htmlId)) {
+    // OK: jeśli 0 lub '0' to puste pole
+    const element = document.getElementById(htmlId);
+    if (element) element.textContent = (value == 0 || value === '0') ? '' : value;
+} else if (nokFields.includes(htmlId)) {
+    // NOK: pokaż tylko jeśli odpowiadające OK > 0
+    const element = document.getElementById(htmlId);
+    const okId = htmlId.replace('nok', 'ok');
+    const okMap = cellMappings[okId];
+    const okValue = data[okMap.row - 1]?.[getGoogleSheetColumnIndex(okMap.col)] ?? '';
+    if (element) element.textContent = (okValue > 0) ? value : '';
+} else {
+    const element = document.getElementById(htmlId);
+    if (element) element.textContent = value;
+}
             }
         } catch (error) {
             console.error('Błąd podczas pobierania lub przetwarzania danych:', error);
