--- a/index.html
+++ b/index.html
@@ -202,10 +202,11 @@
             <div class="top-bar-item select-wrapper">
                 <select id="sheetSelector">
                     <option value="">Wybierz linię</option>
-                    <option>NHL</option>
                     <option>MP4</option>
-                    <option>Hood Latch</option>
                     <option>M4</option>
+                    <option>Hood Latch</option>
+                    <option>NHL</option>
+                    <option>U25</option>
                     <option>H-Latch GŁÓWNA</option>
                     <option>H-Latch PIANA</option>
                     <option>139 P</option>
